--- a/canary.html
+++ b/canary.html
@@ -25,15 +25,29 @@
     </nav>
     <main>
         <h1>
-            <!-- Bird name here -->
+            Canary<!-- Bird name here -->
         </h1>
         <!-- Description of bird -->
+        <p> LOrem ipsum fhbjhrevheruhv jfbru foive</p>
         <div>
             <!-- Image of bird -->
+            <img src="./assets/images/canary.jpg" alt="Canary picture">
             <!-- Audio of bird -->
+            <audio controls>
+                <source src="./assets/sounds/canary.wav" type="audio/wav">
+                <source src="./assets/sounds/canary.mp3" type ="audio/mpeg">
+            </audio>
             <div>
                 <h4>Image credit: <a href="https://commons.wikimedia.org/wiki/File:Canary_(Serinus_canaria)_01.jpg">Wikimedia</a> Audio credit: <a href="http://soundbible.com/14-Canary-Singing.html">SoundBible</a></h4>
             </div>
+        </div>
+        <div>
+            <h2>Video on Youtube</h2>
+            <!-- video iframe here -->
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/2VAJP4vXACo" 
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+            encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+        </iframe>
         </div>
     </main>
 </body>
