--- a/meadowlark.html
+++ b/meadowlark.html
@@ -25,19 +25,30 @@
     </nav>
     <main>
         <h1>
-            <!-- Bird name here -->
+            Meadowlark<!-- Bird name here -->
         </h1>
-        <!-- Description of bird -->
+        <p>lorem ipsum fjcnjwkenfj jfnjwen</p><!-- Description of bird -->
         <div>
             <!-- Image of bird -->
+            <img src = "assets/images/western-meadowlark.jpg"
+                 alt = "meadowlark bird">
             <!-- Audio of bird -->
+            <audio controls>
+                <source src="./assets/sounds/meadowlark.wav" type="audio/wav">
+                <source src="./assets/sounds/meadowlark.mp3" type ="audio/mpeg">
+            </audio>
             <div>
                 <h4>Image credit: <a href="https://commons.wikimedia.org/wiki/File:Western_Meadowlark_-_Oregon_-_USA_S4E9863_(23593630930).jpg">Wikimedia</a> Audio credit: <a href="http://soundbible.com/2180-Meadowlark.html">SoundBible</a></h4>
             </div>
         </div>
         <div>
             <h2>Video on Youtube</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Sk4S2spFdcs" 
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+            encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+        </iframe>
             <!-- video iframe here -->
+           
         </div>
     </main>
 </body>
